--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -57,7 +57,7 @@
                         android:id="@+id/tvCity"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Jakarta"
+                        android:text="@string/jakarta"
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp"
                         android:paddingTop="2dp"
@@ -76,7 +76,7 @@
                         android:paddingEnd="8dp"
                         android:paddingTop="2dp"
                         android:paddingBottom="2dp"
-                        android:text="Plan A"
+                        android:text="@string/plan_a"
                         android:fontFamily="@font/poppins_semibold"
                         android:background="@drawable/bg_label_primary"
                         android:textColor="@color/colorWhite"
@@ -89,7 +89,7 @@
                     android:id="@+id/tvNameWisata"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rekomendasi 10 Tempat Wisata di Jakarta"
+                    android:text="@string/rekomendasi_10_tempat_wisata_di_jakarta"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="12sp"
                     android:fontFamily="@font/poppins_semibold"
