--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="Password"
+            android:text="@string/password"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp"
@@ -50,14 +50,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:background="@drawable/bg_outline_primary_rounded"
             android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            />
+            tools:ignore="Autofill" />
 
         <Button
             android:id="@+id/btnAuth"
@@ -106,7 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="New Password"
+            android:text="@string/new_password"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp"
@@ -118,7 +118,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:hint="New Password"
+            android:hint="@string/new_password"
             android:inputType="textPassword"
             android:background="@drawable/bg_outline_primary_rounded"
             android:padding="16dp"
@@ -126,14 +126,14 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             android:singleLine="true"
-            />
+            tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/txt_password_confirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="New Password Confirm"
+            android:text="@string/new_password_confirm"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp"
@@ -145,7 +145,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:hint="New Password Confirm"
+            android:hint="@string/new_password_confirm"
             android:inputType="textPassword"
             android:background="@drawable/bg_outline_primary_rounded"
             android:padding="16dp"
@@ -153,7 +153,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             android:singleLine="true"
-            />
+            tools:ignore="Autofill" />
 
 
         <Button
@@ -162,7 +162,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:background="@drawable/bg_btn_primary_rounded"
-            android:text="Update Email"
+            android:text="@string/update_password"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:fontFamily="@font/poppins_semibold"
