--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Masuk Akun"
+        android:text="@string/masuk_akun"
         android:fontFamily="@font/poppins_semibold"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="Email"
+            android:text="@string/email"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp"
@@ -59,13 +59,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:hint="Email"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:background="@drawable/bg_outline_primary_rounded"
             android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="Autofill" />
 
 
     </LinearLayout>
@@ -86,7 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="Password"
+            android:text="@string/password"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp"
@@ -98,14 +99,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:hint="*********"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:background="@drawable/bg_outline_primary_rounded"
             android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            />
+            tools:ignore="Autofill" />
 
 
     </LinearLayout>
@@ -116,7 +117,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
         android:background="@drawable/bg_btn_primary_rounded"
-        android:text="Masuk"
+        android:text="@string/masuk"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         android:fontFamily="@font/poppins_semibold"
@@ -134,7 +135,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/poppins_regular"
-        android:text="Lupa password?"
+        android:text="@string/lupa_password"
         app:layout_constraintTop_toBottomOf="@id/btnLogin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -157,7 +158,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_regular"
-            android:text="Tidak punya akun ? "
+            android:text="@string/tidak_punya_akun"
             app:layout_constraintTop_toBottomOf="@id/btnLogin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -167,7 +168,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_semibold"
-            android:text="Daftar"
+            android:text="@string/daftar"
             app:layout_constraintTop_toBottomOf="@id/btnLogin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
