--- a/app/src/main/res/layout/activity_pilihan.xml
+++ b/app/src/main/res/layout/activity_pilihan.xml
@@ -30,7 +30,8 @@
                 android:id="@+id/backarrows"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_arrow_back"/>
+                android:src="@drawable/ic_arrow_back"
+                tools:ignore="ContentDescription" />
         </LinearLayout>
 
         <LinearLayout
@@ -44,7 +45,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pilihan Trip buat Kamu"
+                android:text="@string/pilihan_trip_buat_kamu"
                 android:fontFamily="@font/poppins_semibold"
                 android:textSize="14sp"/>
 
@@ -54,7 +55,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:textSize="12sp"
                 android:textColor="@color/colorGreyMid"
-                android:text="Cek trip seru buat kamu!"/>
+                android:text="@string/cek_trip_seru_buat_kamu"/>
 
         </LinearLayout>
     </LinearLayout>
