--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="user"
+            type="com.cals.getloc.User" />
+    </data>
+
+
+<ScrollView
     android:scrollbars="none"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -37,7 +46,7 @@
                     android:id="@+id/username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/hello"
+                    android:text="@{user.userName}"
                     android:fontFamily="@font/poppins_semibold"
                     android:textSize="14sp"/>
 
@@ -161,7 +170,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_rekomendasi"
             android:layout_width="match_parent"
-            android:layout_height="375dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -229,7 +238,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_pilih"
             android:layout_width="match_parent"
-            android:layout_height="375dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -244,3 +253,4 @@
 
 
 </ScrollView>
+</layout>
